--- a/perfil.html
+++ b/perfil.html
@@ -27,18 +27,18 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" 
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Unidad 1</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDripdownMenuLink">
-                                <a class="dropdown-item" href="Perfil.html">Perfil</a><br>
-                                <a class="dropdown-item" href="Calculadora.html">Calculadora</a><br>
-                                <a class="dropdown-item" href="Tienda.html">Tienda parte 1</a>
+                                <a class="dropdown-item" href="perfil.html">Perfil</a><br>
+                                <a class="dropdown-item" href="calculadora.html">Calculadora</a><br>
+                                <a class="dropdown-item" href="tienda.html">Tienda parte 1</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" 
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Unidad 2</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDripdownMenuLink">
-                                <a class="dropdown-item" href="Tiendapedido.html">Tienda Pedido</a><br>
+                                <a class="dropdown-item" href="tiendapedido.html">Tienda Pedido</a><br>
                                 <a class="dropdown-item" href="json.html">Json</a><br>
-                                <a class="dropdown-item" href="Tiendapedido2.html">Tienda parte 2</a>
+                                <a class="dropdown-item" href="tiendapedido2.html">Tienda parte 2</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
