--- a/ladipage.html
+++ b/ladipage.html
@@ -19,23 +19,22 @@
     height: 40;
     border-left: 40px solid transparent;
     border-right: 40px solid transparent;
-    border-bottom: 100px solid bisque; /* Color rojo */
+    border-bottom: 100px solid bisque; 
     position: absolute;
-    top: 36%; /* Centrar verticalmente */
+    top: 36%; 
     left: 18%;
-    transform: translateY(-60%); /* Ajuste para centrar verticalmente */
-
+    transform: translateY(-60%); 
   }
   .cuerno2 {
     width: 35;
     height: 40;
     border-left: 40px solid transparent;
     border-right: 40px solid transparent;
-    border-bottom: 100px solid bisque; /* Color rojo */
+    border-bottom: 100px solid bisque;
     position: absolute;
-    top: 36%; /* Centrar verticalmente */
+    top: 36%; 
     left: 26%;
-    transform: translateY(-60%); /* Ajuste para centrar verticalmente */
+    transform: translateY(-60%); 
 
   }
   .brazo {
